删除多余的JVM参数